ollama/ollama.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: production
  labels:
    app: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      securityContext:
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ollama
          image: ollama/ollama:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: state
              mountPath: /root/.ollama
              subPath: ollama
        - name: ollama-webui
          image: ghcr.io/open-webui/open-webui:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: state
              mountPath: /app/backend/data
              subPath: webui
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: ollama-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: production
  labels:
    app: ollama
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`gpt.staging.imranr.dev`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
      services:
        - name: ollama
          port: 8080
  tls:
    secretName: imranr-dev-tls
